MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfvalue/libfvalue.vcproj \
	libnsfdb/libnsfdb.vcproj \
	libuna/libuna.vcproj \
	nsfdb_test_error/nsfdb_test_error.vcproj \
	nsfdb_test_file/nsfdb_test_file.vcproj \
	nsfdb_test_note/nsfdb_test_note.vcproj \
	nsfdb_test_open_close/nsfdb_test_open_close.vcproj \
	nsfdb_test_support/nsfdb_test_support.vcproj \
	nsfdbexport/nsfdbexport.vcproj \
	nsfdbinfo/nsfdbinfo.vcproj \
	libnsfdb.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

