MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfvalue/libfvalue.vcproj \
	libnsfdb/libnsfdb.vcproj \
	libuna/libuna.vcproj \
	nsfdb_test_bucket/nsfdb_test_bucket.vcproj \
	nsfdb_test_error/nsfdb_test_error.vcproj \
	nsfdb_test_file/nsfdb_test_file.vcproj \
	nsfdb_test_io_handle/nsfdb_test_io_handle.vcproj \
	nsfdb_test_note/nsfdb_test_note.vcproj \
	nsfdb_test_note_item_class/nsfdb_test_note_item_class.vcproj \
	nsfdb_test_note_item_type/nsfdb_test_note_item_type.vcproj \
	nsfdb_test_note_value/nsfdb_test_note_value.vcproj \
	nsfdb_test_notify/nsfdb_test_notify.vcproj \
	nsfdb_test_rrv_bucket/nsfdb_test_rrv_bucket.vcproj \
	nsfdb_test_rrv_bucket_descriptor/nsfdb_test_rrv_bucket_descriptor.vcproj \
	nsfdb_test_rrv_value/nsfdb_test_rrv_value.vcproj \
	nsfdb_test_support/nsfdb_test_support.vcproj \
	nsfdb_test_unique_name_key/nsfdb_test_unique_name_key.vcproj \
	nsfdbexport/nsfdbexport.vcproj \
	nsfdbinfo/nsfdbinfo.vcproj \
	libnsfdb.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	-rm -f Makefile

